@ adds sms script

--- a/public/index.html
+++ b/public/index.html
@@ -49,7 +49,7 @@
                 password: document.getElementById('password').value
             })
                 .then(function (response) {
-                    console.log(response);
+                    alert('ثبت نام با موفقیت انجام شد!')
                 })
                 .catch(function (error) {
                     console.log(error);
